# voronoi

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
include/voronoi/delaunay/: delaunay.hpp
include/voronoi/generator/: generate.hpp
include/voronoi/graph/: graph.hpp  node.hpp
include/voronoi/math/: point2d.hpp  rect2d.hpp
source/: main.cpp
source/delaunay/: delaunay.cpp
source/generator/: generate.cpp
source/graph/: graph.cpp
